--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,6 +24,12 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
          version="2.4">
   <display-name>Central Authentication System (CAS) 4.0.2</display-name>
+  <jsp-config>
+      <jsp-property-group>
+          <url-pattern>*.jsp</url-pattern>
+          <page-encoding>UTF-8</page-encoding>
+      </jsp-property-group>
+  </jsp-config>
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
